--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.2",
     "prompt": "^1.2.1",
     "prompt-sync": "^4.2.0"
   }
